--- a/Shaders.csproj
+++ b/Shaders.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\data\Data.csproj" />
+    <ProjectReference Include="..\data\source\Data.csproj" />
     <ProjectReference Include="..\simulation\source\Simulation.csproj" />
     <ProjectReference Include="..\unmanaged\source\Unmanaged.csproj" />
   </ItemGroup>
