--- a/Shaders.csproj
+++ b/Shaders.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>disable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<BaseOutputPath>bin~\</BaseOutputPath>
+		<BaseIntermediateOutputPath>obj~\</BaseIntermediateOutputPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\data\source\Data.csproj" />
-    <ProjectReference Include="..\simulation\source\Simulation.csproj" />
-    <ProjectReference Include="..\unmanaged\source\Unmanaged.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\data\source\Data.csproj" />
+		<ProjectReference Include="..\simulation\source\Simulation.csproj" />
+		<ProjectReference Include="..\unmanaged\source\Unmanaged.csproj" />
+	</ItemGroup>
 
 </Project>
