--- a/source/Shaders.csproj
+++ b/source/Shaders.csproj
@@ -9,9 +9,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\data\source\Data.csproj" />
-		<ProjectReference Include="..\simulation\source\Simulation.csproj" />
-		<ProjectReference Include="..\unmanaged\source\Unmanaged.csproj" />
+		<ProjectReference Include="..\..\data\source\Data.csproj" />
+		<ProjectReference Include="..\..\simulation\source\Simulation.csproj" />
+		<ProjectReference Include="..\..\unmanaged\source\Unmanaged.csproj" />
 	</ItemGroup>
 
 </Project>
