--- a/source/Shaders.csproj
+++ b/source/Shaders.csproj
@@ -4,8 +4,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<BaseOutputPath>bin~\</BaseOutputPath>
-		<BaseIntermediateOutputPath>obj~\</BaseIntermediateOutputPath>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
