make test initialization consistent

--- a/tests/Shaders.Tests.csproj
+++ b/tests/Shaders.Tests.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\types\core\Types.Core.csproj" />
     <ProjectReference Include="..\..\unmanaged\tests\Unmanaged.Tests.csproj" />
+    <ProjectReference Include="..\..\worlds\tests\Worlds.Tests.csproj" />
     <ProjectReference Include="..\source\Shaders.csproj" />
   </ItemGroup>
 
