--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,13 @@ jobs:
         with:
           path: ${{ github.event.repository.name }}
             
+      - name: Checkout `unmanaged`
+        uses: actions/checkout@v4.1.2
+        with:
+          repository: simulation-tree/unmanaged
+          token: ${{ secrets.PAT }}
+          path: unmanaged
+      
       - name: Checkout `worlds`
         uses: actions/checkout@v4.1.2
         with:
@@ -29,13 +36,6 @@ jobs:
           token: ${{ secrets.PAT }}
           path: types
       
-      - name: Checkout `unmanaged`
-        uses: actions/checkout@v4.1.2
-        with:
-          repository: simulation-tree/unmanaged
-          token: ${{ secrets.PAT }}
-          path: unmanaged
-      
       - name: Checkout `collections`
         uses: actions/checkout@v4.1.2
         with:
@@ -46,7 +46,9 @@ jobs:
       - name: Setup
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version:  |
+            9.0.x
+            10.0.x
 
       - name: Set VERSION variable from tag
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
@@ -64,7 +66,7 @@ jobs:
         run: dotnet build "${{ github.event.repository.name }}/tests" -c Release /p:Version=${VERSION}
             
       - name: Test
-        run: dotnet test "${{ github.event.repository.name }}/tests" -c Release --logger "trx"
+        run: dotnet test "${{ github.event.repository.name }}/tests" -c Release --logger "trx" --framework net10.0
             
       - name: Pack `Shaders`
         run: dotnet pack "${{ github.event.repository.name }}/source" /p:Version=${VERSION} --no-build --output .
