--- a/source/buildTransitive/Shaders.targets
+++ b/source/buildTransitive/Shaders.targets
@@ -3,7 +3,7 @@
 
     <ItemGroup>
         <Reference Include="Shaders">
-            <HintPath>$(MSBuildThisFileDirectory)..\lib\net9.0\$(Configuration)\Shaders.dll</HintPath>
+            <HintPath>$(MSBuildThisFileDirectory)..\lib\$(TargetFramework)\$(Configuration)\Shaders.dll</HintPath>
         </Reference>
     </ItemGroup>
 
